--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,12 @@
 
             <dependency>
                 <groupId>com.acmedcare.framework</groupId>
+                <artifactId>spring-boot-starter-resteasy</artifactId>
+                <version>2.2.0-RC1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acmedcare.framework</groupId>
                 <artifactId>acmedcare-spring-aop-starter</artifactId>
                 <version>2.1.0-RC1</version>
             </dependency>
@@ -186,7 +192,13 @@
             <dependency>
                 <groupId>com.acmedcare.framework</groupId>
                 <artifactId>spring-boot-starter-acmedcare-banner</artifactId>
-                <version>2.1.0-RC1</version>
+                <version>2.2.0-RC1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acmedcare.framework</groupId>
+                <artifactId>spring-boot-starter-fastjson</artifactId>
+                <version>2.2.0-RC1</version>
             </dependency>
 
             <dependency>
@@ -392,13 +404,9 @@
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
                     <version>${spring-boot.version}</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>repackage</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <configuration>
+                        <executable>false</executable>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
