--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,6 +26,18 @@
             <artifactId>applet-common</artifactId>
         </dependency>
 
+        <!--
+        <dependency>
+            <groupId>com.acmedcare.framework</groupId>
+            <artifactId>applet-integrate-dingtalk</artifactId>
+        </dependency>
+        -->
+
+        <dependency>
+            <groupId>com.acmedcare.framework</groupId>
+            <artifactId>applet-integrate-default</artifactId>
+        </dependency>
+
         <!-- Spring Boot Libs -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -49,6 +61,29 @@
             <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.acmedcare.framework</groupId>
+            <artifactId>spring-boot-starter-acmedcare-banner</artifactId>
+        </dependency>
+
     </dependencies>
+
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.acmedcare.framework</groupId>
+                <artifactId>applet-integrates-all</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
