--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -30,6 +30,13 @@ server.undertow.max-http-post-size=0
 server.undertow.worker-threads=512
 
 
+#### global applets config ####
+applet.integrate.enabled=true
+applet.integrate.supported-applets=aorp
+
+# default applet config properties
+applet.integrate.default.enabled=true
+
 ## Ding talk config properties
 applet.integrate.ding-talk.enabled=true
 applet.integrate.ding-talk.app-id=27844
@@ -38,6 +45,3 @@ applet.integrate.ding-talk.suite-key=suiteglmqgdhcpb6garnv
 applet.integrate.ding-talk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
 applet.integrate.ding-talk.callback-url-aes-key=
 applet.integrate.ding-talk.callback-url-sign-token=
-
-# default applet config properties
-applet.integrate.default.enabled=true
