fix supportedApplets supported '*' regex

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -30,9 +30,9 @@ server.undertow.max-http-post-size=0
 server.undertow.worker-threads=512
 
 
-#### global applets config ####
+######## global applets config ########
 applet.integrate.enabled=true
-applet.integrate.supported-applets=aorp
+applet.integrate.supported-applets=*
 
 # default applet config properties
 applet.integrate.default.enabled=true
