improve applets plugins switch supported

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -38,10 +38,10 @@ applet.integrate.supported-applets=*
 applet.integrate.default.enabled=true
 
 ## Ding talk config properties
-applet.integrate.ding-talk.enabled=true
-applet.integrate.ding-talk.app-id=27844
-applet.integrate.ding-talk.suite-id=6704009
-applet.integrate.ding-talk.suite-key=suiteglmqgdhcpb6garnv
-applet.integrate.ding-talk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
-applet.integrate.ding-talk.callback-url-aes-key=
-applet.integrate.ding-talk.callback-url-sign-token=
+applet.integrate.dingtalk.enabled=false
+applet.integrate.dingtalk.app-id=27844
+applet.integrate.dingtalk.suite-id=6704009
+applet.integrate.dingtalk.suite-key=suiteglmqgdhcpb6garnv
+applet.integrate.dingtalk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
+applet.integrate.dingtalk.callback-url-aes-key=
+applet.integrate.dingtalk.callback-url-sign-token=
