rename default enabled properties name;

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -35,7 +35,7 @@ applet.integrate.enabled=true
 applet.integrate.supported-applets=*
 
 # default applet config properties
-applet.integrate.default.enabled=true
+applet.integrate.aorp.enabled=true
 
 ## Ding talk config properties
 applet.integrate.dingtalk.enabled=false
