--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -38,7 +38,7 @@ applet.integrate.supported-applets=*
 applet.integrate.aorp.enabled=true
 
 ## Ding talk config properties
-applet.integrate.dingtalk.enabled=false
+applet.integrate.dingtalk.enabled=true
 applet.integrate.dingtalk.app-id=27844
 applet.integrate.dingtalk.suite-id=6704009
 applet.integrate.dingtalk.suite-key=suiteglmqgdhcpb6garnv
