--- a/integrates/api/pom.xml
+++ b/integrates/api/pom.xml
@@ -39,6 +39,11 @@
         </dependency>
 
         <dependency>
+            <groupId>xyz.vopen.cartier</groupId>
+            <artifactId>cartier-classpath-scanner</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
