--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,12 @@
             </dependency>
 
             <dependency>
+                <groupId>xyz.vopen.cartier</groupId>
+                <artifactId>cartier-classpath-scanner</artifactId>
+                <version>1.1.0-RELEASE</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>fastjson</artifactId>
                 <version>1.2.54</version>
