--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 management.endpoints.web.exposure.include=*
 management.endpoints.jmx.exposure.include=*
 
+management.metrics.export.jmx.enabled=false
+
 ## server config
 # Undertow Server Config
 # Undertow access log directory.
@@ -32,7 +34,8 @@ server.undertow.worker-threads=512
 
 ######## global applets config ########
 applet.integrate.enabled=true
-applet.integrate.supported-applets=*
+applet.integrate.supported-applet-types=*
+applet.integrate.base-packages=com.acmedcare.framework.applet.integrate.dingtalk.endpoint
 
 # default applet config properties
 applet.integrate.aorp.enabled=true
@@ -41,7 +44,8 @@ applet.integrate.aorp.enabled=true
 applet.integrate.dingtalk.enabled=true
 applet.integrate.dingtalk.app-id=27844
 applet.integrate.dingtalk.suite-id=6704009
-applet.integrate.dingtalk.suite-key=suiteglmqgdhcpb6garnv
+#applet.integrate.dingtalk.suite-key=suiteglmqgdhcpb6garnv
+applet.integrate.dingtalk.suite-key=suite4xxxxxxxxxxxxxxx
 applet.integrate.dingtalk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
-applet.integrate.dingtalk.callback-url-aes-key=
-applet.integrate.dingtalk.callback-url-sign-token=
+applet.integrate.dingtalk.callback-url-aes-key=4g5j64qlyl3zvetqxz5jiocdr586fn2zvjpa8zls3ij
+applet.integrate.dingtalk.callback-url-sign-token=123456
