--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
         <module>common</module>
         <module>integrates</module>
         <module>server</module>
+        <module>storage</module>
     </modules>
 
     <dependencyManagement>
@@ -141,6 +142,13 @@
             <dependency>
                 <groupId>com.acmedcare.framework</groupId>
                 <artifactId>applet-integrates-all</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+            </dependency>
+
+            <dependency>
+                <groupId>com.acmedcare.framework</groupId>
+                <artifactId>applet-storage-all</artifactId>
                 <version>${project.version}</version>
                 <type>pom</type>
             </dependency>
@@ -248,6 +256,12 @@
                 <groupId>com.squareup.okhttp3</groupId>
                 <artifactId>okhttp</artifactId>
                 <version>3.13.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.rocksdb</groupId>
+                <artifactId>rocksdbjni</artifactId>
+                <version>6.2.2</version>
             </dependency>
 
             <dependency>
