--- a/integrates/pom.xml
+++ b/integrates/pom.xml
@@ -42,6 +42,14 @@
                 <artifactId>applet-integrate-dingtalk</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.acmedcare.framework</groupId>
+                <artifactId>applet-storage-all</artifactId>
+                <version>${project.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
