defined common storage api for extension

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -37,6 +37,9 @@ applet.integrate.enabled=true
 applet.integrate.supported-applet-types=*
 applet.integrate.base-packages=com.acmedcare.framework.applet.integrate.dingtalk.endpoint
 
+applet.integrate.repository.enabled=true
+applet.integrate.repository.rdb-config.storage-path=
+
 # default applet config properties
 applet.integrate.aorp.enabled=true
 
