add release tag

--- a/pom.xml
+++ b/pom.xml
@@ -464,7 +464,15 @@
                     <version>${spring-boot.version}</version>
                     <configuration>
                         <executable>false</executable>
+                        <includeSystemScope>true</includeSystemScope>
                     </configuration>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>repackage</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
