fix mapdb saved & transactional issues

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -40,12 +40,23 @@
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
         <dependency>
             <groupId>com.acmedcare.framework</groupId>
             <artifactId>spring-boot-starter-acmedcare-banner</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.acmedcare.framework</groupId>
+            <artifactId>spring-boot-starter-cors</artifactId>
         </dependency>
 
     </dependencies>
