--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.acmedcare.framework</groupId>
+                <artifactId>spring-boot-starter-cors</artifactId>
+                <version>2.2.0-RC1</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.acmedcare.framework.kits</groupId>
                 <artifactId>common-kits</artifactId>
                 <version>Antarctica.RC4</version>
