add wechat micro-app、mp service 、wechat pay service  support

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -52,3 +52,26 @@ applet.integrate.dingtalk.suite-key=suite4xxxxxxxxxxxxxxx
 applet.integrate.dingtalk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
 applet.integrate.dingtalk.callback-url-aes-key=4g5j64qlyl3zvetqxz5jiocdr586fn2zvjpa8zls3ij
 applet.integrate.dingtalk.callback-url-sign-token=123456
+
+# wechat
+applet.integrate.wechat.enabled=true
+applet.integrate.wechat.micro-app-config.enabled=true
+applet.integrate.wechat.micro-app-config.aes-key=1
+applet.integrate.wechat.micro-app-config.appid=1
+applet.integrate.wechat.micro-app-config.msg-data-format=json
+applet.integrate.wechat.micro-app-config.secret=1
+applet.integrate.wechat.micro-app-config.token=1
+
+applet.integrate.wechat.mp-config.enabled=true
+applet.integrate.wechat.mp-config.aes-key=1
+applet.integrate.wechat.mp-config.secret=1
+applet.integrate.wechat.mp-config.app-id=1
+applet.integrate.wechat.mp-config.token=1
+
+applet.integrate.wechat.pay-config.enabled=true
+applet.integrate.wechat.pay-config.app-id=1
+applet.integrate.wechat.pay-config.key-path=1
+applet.integrate.wechat.pay-config.mch-id=1
+applet.integrate.wechat.pay-config.mch-key=1
+applet.integrate.wechat.pay-config.sub-app-id=1
+applet.integrate.wechat.pay-config.sub-mch-id=1
