fix wechat applets auto configure issues ;

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -62,7 +62,7 @@ applet.integrate.wechat.micro-app-config.msg-data-format=json
 applet.integrate.wechat.micro-app-config.secret=1
 applet.integrate.wechat.micro-app-config.token=1
 
-applet.integrate.wechat.mp-config.enabled=true
+applet.integrate.wechat.mp-config.enabled=false
 applet.integrate.wechat.mp-config.aes-key=1
 applet.integrate.wechat.mp-config.secret=1
 applet.integrate.wechat.mp-config.app-id=1
