change logger level to info ;

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -56,11 +56,11 @@ applet.integrate.dingtalk.callback-url-sign-token=123456
 # wechat
 applet.integrate.wechat.enabled=true
 applet.integrate.wechat.micro-app-config.enabled=true
-applet.integrate.wechat.micro-app-config.aes-key=1
-applet.integrate.wechat.micro-app-config.appid=1
+applet.integrate.wechat.micro-app-config.appid=wxce344e5996cf635c
+applet.integrate.wechat.micro-app-config.secret=1cd69cdfd6c30e46c20354677c957ea0
+applet.integrate.wechat.micro-app-config.aes-key=
 applet.integrate.wechat.micro-app-config.msg-data-format=json
-applet.integrate.wechat.micro-app-config.secret=1
-applet.integrate.wechat.micro-app-config.token=1
+applet.integrate.wechat.micro-app-config.token=
 
 applet.integrate.wechat.mp-config.enabled=false
 applet.integrate.wechat.mp-config.aes-key=1
