add file upload & download endpoint;

--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.jboss.resteasy</groupId>
+                <artifactId>resteasy-multipart-provider</artifactId>
+                <version>4.3.0.Final</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.acmedcare.framework</groupId>
                 <artifactId>acmedcare-spring-aop-starter</artifactId>
                 <version>2.1.0-RC1</version>
@@ -177,6 +183,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-lang3</artifactId>
                 <version>3.8.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-fileupload</groupId>
+                <artifactId>commons-fileupload</artifactId>
+                <version>1.4</version>
             </dependency>
 
             <dependency>
