--- a/integrates/api/pom.xml
+++ b/integrates/api/pom.xml
@@ -49,6 +49,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-multipart-provider</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>xyz.vopen.cartier</groupId>
             <artifactId>cartier-classpath-scanner</artifactId>
         </dependency>
