--- a/common/pom.xml
+++ b/common/pom.xml
@@ -1,6 +1,12 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>com.acmedcare.framework.kits</groupId>
+            <artifactId>timed-id-kit</artifactId>
+        </dependency>
+    </dependencies>
     <parent>
         <groupId>com.acmedcare.framework</groupId>
         <artifactId>applet-all</artifactId>
