--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -37,6 +37,9 @@ applet.integrate.enabled=true
 applet.integrate.supported-applet-types=*
 applet.integrate.base-packages=com.acmedcare.framework.applet.integrate.dingtalk.endpoint
 
+applet.integrate.file-storage-config.type=local
+applet.integrate.file-storage-config.local-storage-publish-url-prefix=http://127.0.0.1:5543/applet-endpoints
+
 applet.integrate.repository.enabled=true
 applet.integrate.repository.rdb-config.storage-path=
 
@@ -70,6 +73,7 @@ applet.integrate.wechat.mp-config.token=1
 
 applet.integrate.wechat.pay-config.enabled=true
 applet.integrate.wechat.pay-config.app-id=1
+applet.integrate.wechat.pay-config.notify-url=
 applet.integrate.wechat.pay-config.key-path=1
 applet.integrate.wechat.pay-config.mch-id=1
 applet.integrate.wechat.pay-config.mch-key=1
