--- a/integrates/alipay/pom.xml
+++ b/integrates/alipay/pom.xml
@@ -60,6 +60,7 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.62</version>
         </dependency>
 
         <!-- Spring Boot Libs-->
