upgrade open api doc;

--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -40,6 +40,12 @@ applet.integrate.base-packages=com.acmedcare.framework.applet.integrate.dingtalk
 applet.integrate.file-storage-config.type=local
 applet.integrate.file-storage-config.local-storage-publish-url-prefix=http://127.0.0.1:5543/applet-endpoints
 
+## Nas Config
+applet.integrate.file-storage-config.nas-config.app-id=
+applet.integrate.file-storage-config.nas-config.app-key=
+applet.integrate.file-storage-config.nas-config.https=false
+applet.integrate.file-storage-config.nas-config.server-addrs=
+
 
 applet.integrate.repository.enabled=true
 applet.integrate.repository.rdb-config.storage-path=
@@ -58,7 +64,7 @@ applet.integrate.dingtalk.callback-url-aes-key=4g5j64qlyl3zvetqxz5jiocdr586fn2zv
 applet.integrate.dingtalk.callback-url-sign-token=123456
 
 # wechat
-applet.integrate.wechat.enabled=true
+applet.integrate.wechat.enabled=false
 applet.integrate.wechat.micro-app-config.enabled=true
 applet.integrate.wechat.micro-app-config.appid=wxce344e5996cf635c
 applet.integrate.wechat.micro-app-config.secret=1cd69cdfd6c30e46c20354677c957ea0
@@ -72,7 +78,7 @@ applet.integrate.wechat.mp-config.secret=1
 applet.integrate.wechat.mp-config.app-id=1
 applet.integrate.wechat.mp-config.token=1
 
-applet.integrate.wechat.pay-config.enabled=true
+applet.integrate.wechat.pay-config.enabled=false
 applet.integrate.wechat.pay-config.app-id=1
 applet.integrate.wechat.pay-config.notify-url=
 applet.integrate.wechat.pay-config.key-path=1
