add production config properties

--- a/server/src/main/resources/application-production.properties
+++ b/server/src/main/resources/application-production.properties
@@ -5,3 +5,5 @@ applet.integrate.dingtalk.suite-key=suiteglmqgdhcpb6garnv
 applet.integrate.dingtalk.suite-secret=_rN_Zd4jydsKN7C2iDFu3ipGX8KygLzdvFlzuATT52jAZe38-G1T8y9CZpEBO0wb
 applet.integrate.dingtalk.callback-url-aes-key=4g5j64qlyl3zvetqxz5jiocdr586fn2zvjpa8zls3ij
 applet.integrate.dingtalk.callback-url-sign-token=123456
+
+applet.integrate.file-storage-config.local-storage-publish-url-prefix=http://47.97.26.165:5543/applet-endpoints
